# ssrs

./: .vampus.yml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  git-cliff.toml
.github/workflows/: release-prepare.yml  release.yml
src/: audio.rs  cache.rs  cli.rs  hf.rs  main.rs  model.rs  whisper.rs
