[package]
name = "ssrs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
hf-hub = { version = "0.5", default-features = false, features = ["ureq"] }
symphonia = { version = "0.6", features = ["mp3", "wav", "pcm", "flac", "ogg", "vorbis"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokenizers = "0.21"
